--- a/projects/components/side-list/index.html
+++ b/projects/components/side-list/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <ul class="side-list">
-        <li class="side-list-item has-sub">
+        <li class="side-list-item">
           Side List Item 1
           <button class="open-sub-list-btn"></button>
           <ul class="sub-list">
@@ -23,7 +23,7 @@
             <li>Sub List Item 1.3</li>
           </ul>
         </li>
-        <li class="side-list-item has-sub">
+        <li class="side-list-item">
           Side List Item 2
           <button class="open-sub-list-btn"></button>
           <ul class="sub-list">
@@ -34,14 +34,10 @@
             <li>Sub List Item 2.1</li>
             <li>Sub List Item 2.2</li>
             <li>Sub List Item 2.3</li>
-            <li>Sub List Item 2.4</li>
-            <li>Sub List Item 2.5</li>
           </ul>
         </li>
+        <li class="side-list-item">Side List Item 3</li>
         <li class="side-list-item">
-          <span>Side List Item 3</span>
-        </li>
-        <li class="side-list-item has-sub">
           Side List Item 4
           <button class="open-sub-list-btn"></button>
           <ul class="sub-list">
@@ -52,15 +48,10 @@
             <li>Sub List Item 4.1</li>
             <li>Sub List Item 4.2</li>
             <li>Sub List Item 4.3</li>
-            <li>Sub List Item 4.3</li>
           </ul>
         </li>
-        <li class="side-list-item">
-          <span>Side List Item 5</span>
-        </li>
-        <li class="side-list-item">
-          <span>Side List Item 6</span>
-        </li>
+        <li class="side-list-item">Side List Item 5</li>
+        <li class="side-list-item">Side List Item 6</li>
       </ul>
     </div>
 
