--- a/projects/components/calendar/index.html
+++ b/projects/components/calendar/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- FontAwesome -->
+    <!-- FontAwesome CDN -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -17,28 +17,27 @@
     <title>Calendar</title>
   </head>
   <body>
-    <div class="calendar-container">
+    <div class="calendar">
       <div class="calendar-top">
-        <div class="calendar">
-          <ul class="days">
-            <li class="day">M</li>
-            <li class="day">T</li>
-            <li class="day">W</li>
-            <li class="day">Th</li>
-            <li class="day">F</li>
-            <li class="day">Sa</li>
-            <li class="day">S</li>
-          </ul>
+        <ul class="days">
+          <li class="day">M</li>
+          <li class="day">T</li>
+          <li class="day">W</li>
+          <li class="day">Th</li>
+          <li class="day">F</li>
+          <li class="day">Sa</li>
+          <li class="day">S</li>
+        </ul>
 
-          <ul class="dates"></ul>
-        </div>
+        <ul class="dates"></ul>
       </div>
-
       <div class="calendar-bottom">
         <button class="prev-btn" onclick="prevMonth()">
           <i class="fas fa-chevron-left"></i>
         </button>
+
         <span class="current-month-year"></span>
+
         <button class="next-btn" onclick="nextMonth()">
           <i class="fas fa-chevron-right"></i>
         </button>
