--- a/projects/components/calendar/style.css
+++ b/projects/components/calendar/style.css
@@ -1,12 +1,13 @@
+/* Quicksand Font from Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap");
 
 /* Variables */
 :root {
-  --color-primary: #f4d03f;
+  --color-primary: rgb(244, 208, 63);
   --color-primary-light: rgba(244, 208, 63, 0.8);
-  --color-secondary: #16a085;
+  --color-secondary: rgb(22, 160, 133);
   --color-secondary-light: rgba(22, 160, 132, 0.7);
-  --color-gray: #818181;
+  --color-gray: rgb(129, 129, 129);
 }
 
 * {
@@ -33,7 +34,7 @@ body {
   );
 }
 
-.calendar-container {
+.calendar {
   height: 500px;
   width: 500px;
   padding: 20px;
@@ -46,24 +47,20 @@ body {
   height: 92%;
 }
 
-.calendar {
-  height: 100%;
-}
-
-.calendar .days {
+.calendar-top .days {
   height: 8%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
 
-.calendar .days .day {
+.calendar-top .days .day {
   height: 100%;
   text-align: center;
   color: var(--color-secondary);
   font-weight: bold;
 }
 
-.calendar .dates {
+.calendar-top .dates {
   height: 92%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -71,7 +68,7 @@ body {
   gap: 6px;
 }
 
-.calendar .dates .date {
+.calendar-top .dates .date {
   height: 100%;
   display: flex;
   justify-content: center;
@@ -79,15 +76,15 @@ body {
   border-radius: 6px;
   color: var(--color-gray);
   font-size: 14px;
-  animation: dayAppear 0.3s ease-in-out forwards;
+  animation: dateAppear 0.3s ease-in-out forwards;
 }
 
-.calendar .dates .date.current {
+.calendar-top .dates .date.current {
   background-color: var(--color-secondary-light);
   color: #fff;
 }
 
-.calendar .dates .date.current.today {
+.calendar-top .dates .date.current.today {
   background-color: var(--color-primary-light);
 }
 
@@ -127,7 +124,7 @@ body {
 }
 
 /* Animations */
-@keyframes dayAppear {
+@keyframes dateAppear {
   from {
     opacity: 0;
     transform: scale(0.8);
@@ -140,17 +137,17 @@ body {
 
 /* Media Queries */
 @media (max-width: 768px) {
-  .calendar-container {
+  .calendar {
     height: 70vw;
     width: 70vw;
     padding: 10px;
   }
 
-  .calendar .days .day {
+  .calendar-top .days .day {
     font-size: 14px;
   }
 
-  .calendar .dates {
+  .calendar-top .dates {
     gap: 3px;
   }
 
@@ -167,13 +164,13 @@ body {
 }
 
 @media (max-width: 425px) {
-  .calendar-container {
+  .calendar {
     height: 90vw;
     width: 90vw;
     padding: 6px;
   }
 
-  .calendar .dates {
+  .calendar-top .dates {
     gap: 2px;
   }
 }
